# short

./: CMakeLists.txt
include/: AITetris.h  Tetris.h
src/: AI_Tetris.cpp  Game.cpp  Tetris.cpp  ai_main.cpp
